changed image source

--- a/css/style.css
+++ b/css/style.css
@@ -955,7 +955,7 @@ textarea {
 */
 .welcome {
   position: relative;
-  background-image: url("/img/commercial_painting.jpg");
+  background-image: url("../img/commercial_painting.jpg");
   background-size: cover;
   top: 0;
   left: 10%;
