--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -97,7 +97,7 @@
 
 .welcome {
   position: relative;
-  background-image: url('/img/commercial_painting.jpg');
+  background-image: url('../img/commercial_painting.jpg');
   background-size: cover;
   top: 0;
   left: 10%;
