--- a/sass/base/_utlities.scss
+++ b/sass/base/_utlities.scss
@@ -67,7 +67,13 @@
 .u-padding-left-huge {
   padding-left: 14rem !important;
 }
-
+.u-padding-all-small {
+  padding: 2rem !important;
+}
 .u-padding-all-big {
   padding: 8rem !important;
+}
+
+.yellow {
+  color: var(--color-primary-yellow);
 }
