--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -10,6 +10,7 @@
 
   &__item {
     &-1 {
+      overflow: hidden;
       @include respond(tab-port) {
         order: 2;
       }
@@ -19,11 +20,17 @@
       @include respond(tab-port) {
         order: 1;
       }
+      @include respond(phone) {
+        padding: 8rem;
+      }
     }
     &-3 {
       padding: 10rem;
       @include respond(tab-port) {
         order: 3;
+      }
+      @include respond(phone) {
+        padding: 8rem;
       }
     }
     &-4 {
@@ -41,11 +48,17 @@
       @include respond(tab-port) {
         order: 5;
       }
+      @include respond(phone) {
+        padding: 8rem;
+      }
     }
     &-7 {
       padding: 10rem;
       @include respond(tab-port) {
         order: 7;
+      }
+      @include respond(phone) {
+        padding: 8rem;
       }
     }
     &-8 {
@@ -54,12 +67,36 @@
       }
     }
   }
+}
 
-  &__img {
-    position: relative;
-    object-fit: cover;
+.feature {
+  overflow: hidden;
+  position: relative;
+  &-img {
     width: 100%;
-    height: 50vh;
-    overflow: hidden;
+    height: 100%;
+    transform: scale(1);
+    backface-visibility: hidden;
+    transition: all 0.5s;
+  }
+  &-caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden;
+  }
+  &:hover &-caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  &:hover &-img {
+    transform: translateX(-4rem) scale(1.4);
+    filter: blur(3px) brightness(80%);
   }
 }
