--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -309,6 +309,7 @@
         display: flex;
         justify-content: center;
         list-style: none;
+        cursor: pointer;
       }
       &__item {
         padding: 1rem;
