--- a/css/style.css
+++ b/css/style.css
@@ -779,53 +779,29 @@ textarea.input {
     background-color: var(--color-primary-white);
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     width: 70%;
-    height: 55%;
+    height: 80%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 5vw);
-    gap: 5rem;
-    padding: 10rem;
     font-size: 2rem;
-    align-content: center; }
-    .popup__content-1 {
-      grid-column: 1 / span 2;
-      grid-row: 1 / 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch; }
-    .popup__content-2 {
-      grid-column: 1 / span 2;
-      grid-row: 2 / 2;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch; }
-    .popup__content-3 {
-      grid-column: 1 / span 2;
-      grid-row: 3 / 4;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch; }
-    .popup__content-4 {
-      grid-column: 2 / 2;
-      grid-row: 4 / 5;
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 5rem; }
+    .popup__content img {
+      padding: 5rem; }
 
-.input {
+.input-popup {
+  display: block;
+  width: 45rem;
   border: none;
   border-bottom: 1px solid grey;
-  height: 5rem;
-  font-size: 1.8rem; }
-  .input-text {
-    height: 10rem; }
+  font-size: 1.5rem;
+  height: 5rem; }
 
 textarea {
-  height: 40px;
   font: var(--font-primary); }
 
 .services {
@@ -1157,7 +1133,8 @@ textarea {
         padding: 2rem;
         display: flex;
         justify-content: center;
-        list-style: none; }
+        list-style: none;
+        cursor: pointer; }
       .section-portfolio__header-filter__item {
         padding: 1rem; }
         .section-portfolio__header-filter__item:hover {
@@ -1383,30 +1360,47 @@ textarea {
 
 .footer {
   width: 100%;
-  height: 10rem;
+  max-height: 20rem;
   margin-top: 5rem;
   background-color: var(--color-primary-black);
   display: flex;
-  justify-content: center;
-  align-items: center; }
-  .footer__list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none; }
-  .footer__item:hover {
-    text-shadow: var(--color-primary-grey) 2px 2px 10px;
-    transform: translateY(-0.3rem);
-    transition: all 0.5s; }
-  .footer__item:active {
-    transform: translateY(-0.1rem);
-    transition: all 0.3s; }
-  .footer__link {
-    padding: 2rem; }
-    .footer__link-icon {
-      width: 3rem;
-      height: 3rem;
-      fill: var(--color-primary-white); }
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  font-family: var(--font-primary-heading);
+  font-weight: 300; }
+  .footer__item {
+    padding: 5rem; }
+    .footer__item-address {
+      display: flex;
+      flex-direction: row;
+      max-height: 18rem; }
+      .footer__item-address-title {
+        display: flex;
+        flex-direction: column;
+        border-left: 1px solid var(--color-primary-grey);
+        margin: 0 2rem;
+        line-height: 1.5rem;
+        padding-left: 1.5rem;
+        align-self: stretch;
+        justify-content: center; }
+        @media (max-width: 37.5em) {
+          .footer__item-address-title {
+            margin: 0 1rem;
+            padding-left: 1rem; } }
+        .footer__item-address-title-large {
+          font-size: 1.6rem;
+          font-weight: 700; }
+        .footer__item-address-title-small {
+          font-size: 1.1rem;
+          font-weight: 400;
+          color: var(--color-primary-grey); }
+    .footer__item-logo {
+      max-width: 15rem;
+      max-height: 15rem;
+      animation: fadeIn;
+      animation-duration: 1s; }
 
 .row {
   max-width: 114rem;
