--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -40,57 +40,28 @@
     background-color: var(--color-primary-white);
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     width: 70%;
-    height: 55%;
+    height: 80%;
     @include center-hv;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 5vw);
-    gap: 5rem;
-    padding: 10rem;
     font-size: 2rem;
-    align-content: center;
-
-    &-1 {
-      grid-column: 1 / span 2;
-      grid-row: 1 / 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch;
-    }
-    &-2 {
-      grid-column: 1 / span 2;
-      grid-row: 2 / 2;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch;
-    }
-    &-3 {
-      grid-column: 1 / span 2;
-      grid-row: 3 / 4;
-      display: flex;
-      flex-direction: column;
-      justify-content: stretch;
-    }
-    &-4 {
-      grid-column: 2 / 2;
-      grid-row: 4 / 5;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 5rem;
+    img {
+      padding: 5rem;
     }
   }
 }
-.input {
+.input-popup {
+  display: block;
+  width: 45rem;
   border: none;
   border-bottom: 1px solid grey;
+  font-size: 1.5rem;
   height: 5rem;
-  font-size: 1.8rem;
-
-  &-text {
-    height: 10rem;
-  }
 }
 textarea {
-  height: 40px;
+  //height: 4px;
   font: var(--font-primary);
 }
