--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,37 +1,54 @@
 .footer {
   width: 100%;
-  height: 10rem;
+  max-height: 20rem;
   margin-top: 5rem;
   background-color: var(--color-primary-black);
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-
-  &__list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-  }
+  color: white;
+  font-family: var(--font-primary-heading);
+  font-weight: 300;
   &__item {
-    &:hover {
-      text-shadow: var(--color-primary-grey) 2px 2px 10px;
-      transform: translateY(-0.3rem);
-      transition: all 0.5s;
-    }
+    padding: 5rem;
+    &-address {
+      display: flex;
+      flex-direction: row;
+      max-height: 18rem;
+      &-title {
+        display: flex;
+        flex-direction: column;
+        border-left: 1px solid var(--color-primary-grey);
+        margin: 0 2rem;
+        line-height: 1.5rem;
+        padding-left: 1.5rem;
+        align-self: stretch;
+        justify-content: center;
 
-    &:active {
-      transform: translateY(-0.1rem);
-      transition: all 0.3s;
-    }
-  }
-  &__link {
-    padding: 2rem;
+        @include respond(phone) {
+          //display: none;
+          margin: 0 1rem;
+          padding-left: 1rem;
+        }
 
-    &-icon {
-      width: 3rem;
-      height: 3rem;
-      fill: var(--color-primary-white);
+        &-large {
+          font-size: 1.6rem;
+          font-weight: 700;
+        }
+
+        &-small {
+          font-size: 1.1rem;
+          font-weight: 400;
+          color: var(--color-primary-grey);
+        }
+      }
+    }
+    &-logo {
+      max-width: 15rem;
+      max-height: 15rem;
+      animation: fadeIn;
+      animation-duration: 1s;
     }
   }
 }
