--- a/css/style.css
+++ b/css/style.css
@@ -639,7 +639,7 @@ textarea.input {
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 450px));
-  grid-template-rows: repeat(3, 450px);
+  grid-auto-rows: 25rem;
   gap: 4rem;
   padding: 1.5rem;
   justify-content: center; }
