--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -93,7 +93,8 @@
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(280px, 450px));
-  grid-template-rows: repeat(3, 450px);
+  // grid-template-rows: repeat(3, 450px);
+  grid-auto-rows: 25rem;
   gap: 4rem;
   padding: 1.5rem;
   justify-content: center;
